Melhorias no desempenho e CPU